agentforce/1.2/modules/ROOT/pages/agentforce-connector-reference.adoc
= Agentforce Connector 1.2 Reference

This connector provides connectivity to the AI agents running in Salesforce’s Agentforce platform.

== Configurations
---
[[Config]]
=== Config

Default configuration

==== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<Config_OauthClientCredentials, OAuth Client Credentials>>
 | Connection types to provide to this configuration. | | x
| Read Timeout a| Number |  Read timeout value. |  30 | 
| Read Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Read Timeout* field.  |  SECONDS |
| Name a| String |  The identifier of this element used to reference it in other components |  | *x*
| Expiration Policy a| <<ExpirationPolicy>> | Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  | 
|===

==== Connection Types

[[Config_OauthClientCredentials]]
===== OAuth Client Credentials

====== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Proxy Configuration a| One of:

* <<DefaultHttpProxyConfig>> | Configures a proxy for outbound connections. |  | 
| Max Connections a| Number | Maximum number of outbound connections to keep open at the same time. |  -1 | 
| Connection Timeout a| Number | Amount of time to wait when initially establishing the TCP connection between the connector and Salesforce Agent before throwing an exception if the connection fails. |  30 | 
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field.  |  SECONDS | 
| Connection Idle Timeout a| Number | Number of units that a connection can remain idle before it is closed |  30 | 
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Idle Timeout* field.  |  SECONDS | 
| TLS Configuration a| <<Tls>> |  Protocol to use for communication. |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Client Id a| String | OAuth client ID as registered with the service provider. |  | x
| Client Secret a| String |  OAuth client secret as registered with the service provider. |  | x
| Token Url a| String |  The service provider's token endpoint URL. |  `\https://{salesforceorg}/services/oauth2/token` | 
| Scopes a| String | OAuth scopes to request during the OAuth dance. This value defaults to the scopes in the annotation. |  | 
| Object Store a| String | Configures the object store that stores data for each resource owner. If not configured, Mule uses the default object store. |  | 
|===

== Supported Operations
* <<ContinueAgentConversation>> 
* <<EndAgentConversation>> 
* <<StartAgentConversation>> 
* <<Unauthorize>> 

== Operations

[[ContinueAgentConversation]]
== Continue Agent Conversation
`<ms-agentforce:continue-agent-conversation>`

Surfaces the message from the MuleSoft application to the agent. The agent maintains the context of the conversation and provides a relevant response (or actions) according to the user's input.

=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Message a| Any |  |  #[payload] | 
| Session Id a| String | Session ID returned with the *Start agent conversation* operation.  |  | x
| Message Sequence Number a| Number |  Increase this number for each subsequent message in a session. |  | x
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  Encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Read Timeout a| Number |  Read timeout value. |  | 
| Read Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Read Timeout* field.  |  |  
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%header,cols="20s,25a,30a,15a,10a"]
|===
|Type |Any
| Attributes Type a| <<InvokeAgentResponseAttributes>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-AGENTFORCE:AGENT_METADATA_FAILURE 
* MS-AGENTFORCE:AGENT_OPERATIONS_FAILURE 
* MS-AGENTFORCE:CONNECTIVITY 
* MS-AGENTFORCE:RETRY_EXHAUSTED 


[[EndAgentConversation]]
== End Agent Conversation
`<ms-agentforce:end-agent-conversation>`

Use the *End agent conversation* operation to close the session after the agent responds.

=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Session Id a| String | Session ID returned with the *Start agent conversation* operation.  |  #[payload] | 
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  Encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | *x*
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Read Timeout a| Number |  Read timeout value. |  | 
| Read Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Read Timeout* field. |  | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===


=== Output

[%header,cols="20s,25a,30a,15a,10a"]
|===
|Type |Any
| Attributes Type a| <<InvokeAgentResponseAttributes>>
|===


=== For Configurations

* <<Config>> 

=== Throws

* MS-AGENTFORCE:AGENT_METADATA_FAILURE 
* MS-AGENTFORCE:AGENT_OPERATIONS_FAILURE 
* MS-AGENTFORCE:CONNECTIVITY 
* MS-AGENTFORCE:RETRY_EXHAUSTED 


[[StartAgentConversation]]
== Start Agent Conversation
`<ms-agentforce:start-agent-conversation>`

Establishes the connection between the app and the agent. This is the first step to enable an external application to interact with the AI agent.

=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Output Mime Type a| String |  MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Agent List a| String |  |  | x
| Bypass User a| Boolean |  Bypasses current user's permissions when the agent needs to access Data Cloud assets. |  #[false] | 
| Read Timeout a| Number |  Read timeout value. |  | 
| Read Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Read Timeout* field. |  | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |  
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<InvokeAgentResponseAttributes>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-AGENTFORCE:AGENT_METADATA_FAILURE 
* MS-AGENTFORCE:AGENT_OPERATIONS_FAILURE 
* MS-AGENTFORCE:CONNECTIVITY 
* MS-AGENTFORCE:RETRY_EXHAUSTED 


[[Unauthorize]]
== Unauthorize
`<ms-agentforce:unauthorize>`

Deletes all the access token information of a given resource owner ID so that it's impossible to execute any operation for that user without doing the authorization dance again

=== Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
|===

=== For Configurations

* <<Config>> 

== Types

[[Tls]]
=== Tls

[%header,cols="20s,25a,30a,15a,10a"]
|======================
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> |  |  | 
| Key Store a| <<KeyStore>> |  |  | 
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  | 
|======================

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the truststore. |  | 
| Password a| String | Password that protects the truststore. |  | 
| Type a| String | Type of truststore. |  | 
| Algorithm a| String | Encryption algorithm that the truststore uses.|  | 
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  | 
|======================

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system, if possible. |  | 
| Type a| String | Type of keystore to use. |  | 
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  | 
| Key Password a| String | Password used to protect the private key. |  | 
| Password a| String | Password used to protect the keystore. |  | 
| Algorithm a| String | Encryption algorithm that the keystore uses. |  | 
|======================

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean a| Which elements to verify in the certificate chain:

* `true`
+
Verify only the last element in the certificate chain.

* `false`
+
Verify all elements in the certificate chain. |  |
| Prefer Crls a| Boolean a| How to check certificate validity:

* `true`
+
Check the Certification Revocation List (CRL) for certificate validity.

* `false`
+
Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  |
| No Fallback a| Boolean a| Whether to use the secondary method to check certificate validity:

* `true`
+
Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`
+
Do not use the secondary method to check certificate validity. |  |
| Soft Fail a| Boolean a| What to do if the revocation server can't be reached or is busy:

* `true`
+
Avoid verification failure.

* `false`
+
Allow the verification to fail. |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[CustomOcspResponder]]
=== Custom Ocsp Responder

[%header,cols="20s,25a,30a,15a,10a"]
|======================
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the truststore), if present. |  | 
|======================

[[CrlFile]]
=== Crl File

[%header,cols="20s,25a,30a,15a,10a"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  | 
|======================

[[Reconnection]]
=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  | 
|===

[[Reconnect]]
=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  | 
| Count a| Number | How many reconnection attempts the Mule app can make. |  | 
|===

[[ReconnectForever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  | 
|===

[[InvokeAgentResponseAttributes]]
=== Invoke Agent Response Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Messages a| Array of <<Message>> |  |  | 
|===

[[Message]]
=== Message

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Collect a| Array of <<Collect>> |  |  | 
| Content Safe a| Boolean |  |  | 
| Feedback Id a| String |  |  | 
| Id a| String |  |  | 
| Message a| String |  |  | 
| Plan Id a| String |  |  | 
| Reason a| String |  |  | 
| Type a| String |  |  | 
|===

[[Collect]]
=== Collect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Data a| <<CollectData>> |  |  | 
| Target Property a| String |  |  | 
| Target Type a| String |  |  | 
|===

[[CollectData]]
=== Collect Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Property a| String |  |  | 
| Type a| String |  |  | 
| Value a| Array of <<SearchResult>> |  |  | 
|===

[[SearchResult]]
=== Search Result

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| S Object Info a| <<SObjectInfo>> |  |  | 
| Data a| <<RecordData>> |  |  | 
| Id a| String |  |  | 
| Record Type Id a| String |  |  | 
| Title a| String |  |  | 
|===

[[SObjectInfo]]
=== S Object Info

[%header,cols="20s,25a,30a,15a,10a"]
|===

| Field | Type | Description | Default Value | Required
| Api Name a| String |  |  | 
| Label a| String |  |  | 
|===

[[RecordData]]
=== Record Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Id a| <<RecordField>> |  |  | 
| Name a| <<RecordField>> |  |  | 
| Type a| <<RecordField>> |  |  | 
|===

[[RecordField]]
=== Record Field

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Display Value a| String |  |  | 
| Value a| String |  |  | 
|===

[[RepeatableInMemoryStream]]
=== Repeatable In-Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the MAX buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max Buffer Size*. |  | 
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  | 
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Max Buffer Size* fields. |  | 
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer's content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  | 
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | x
|===

[[DefaultHttpProxyConfig]]
=== Default Http Proxy Config

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String |  |  | x
| Port a| Number |  |  | x
| Username a| String |  |  | 
| Password a| String |  |  | 
| Non Proxy Hosts a| String |  |  | 
|===

== See Also

* xref:index.adoc[Agentforce Connector Overview]
